--- a/Entitas.properties
+++ b/Entitas.properties
@@ -1,5 +1,5 @@
 Entitas.CodeGenerator.GeneratedFolderPath = Assets/Sources/
-Entitas.CodeGenerator.Contexts = Input,Core,Score
+Entitas.CodeGenerator.Contexts = Game,Input,GameSession
 Entitas.CodeGenerator.EnabledCodeGenerators = BlueprintsGenerator,ComponentExtensionsGenerator,ComponentIndicesGenerator,ContextAttributesGenerator,ContextsGenerator
 Entitas.Unity.VisualDebugging.DefaultInstanceCreatorFolderPath = Assets/Sources/Editor/DefaultInstanceCreator/
 Entitas.Unity.VisualDebugging.TypeDrawerFolderPath = Assets/Sources/Editor/TypeDrawer/
