Ignoring Rider files

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,13 @@ obj
 *.userprefs
 test-results
 
+# Rider
+.idea/
+
 # Custom
 Match-One.sln
 ProjectVersion.txt
+
+Assets/Plugins
+Assets/Plugins.meta
+Assembly-CSharp-Editor-firstpass.csproj
