--- a/Entitas.properties
+++ b/Entitas.properties
@@ -5,6 +5,8 @@ Entitas.CodeGeneration.CodeGenerator.SearchPaths = Assets/Libraries/Entitas, \
                                                    ${user.unity}/Mono/lib/mono/unity, \
                                                    ${user.unity}/UnityExtensions/Unity/GUISystem
 
+Entitas.CodeGeneration.CodeGenerator.Mono = ${user.unity}/MonoBleedingEdge/bin/mono
+Entitas.CodeGeneration.CodeGenerator.CLI = CodeGenerator/entitas.exe
 Entitas.CodeGeneration.CodeGenerator.Plugins = Entitas.CodeGeneration.Plugins, \
                                                Entitas.VisualDebugging.CodeGeneration.Plugins
 
@@ -32,7 +34,8 @@ Entitas.CodeGeneration.CodeGenerator.PostProcessors = Entitas.CodeGeneration.Plu
                                                       Entitas.CodeGeneration.Plugins.MergeFilesPostProcessor, \
                                                       Entitas.CodeGeneration.Plugins.NewLinePostProcessor, \
                                                       Entitas.CodeGeneration.Plugins.UpdateCSProjPostProcessor, \
-                                                      Entitas.CodeGeneration.Plugins.WriteToDiskPostProcessor
+                                                      Entitas.CodeGeneration.Plugins.WriteToDiskPostProcessor, \
+                                                      Entitas.CodeGeneration.Plugins.ConsoleWriteLinePostProcessor
 
 Entitas.CodeGeneration.Plugins.Assemblies = Library/ScriptAssemblies/Assembly-CSharp.dll
 Entitas.CodeGeneration.Plugins.Contexts = Game, \
@@ -45,3 +48,7 @@ Entitas.CodeGeneration.Plugins.TargetDirectory = Assets/Sources
 Entitas.VisualDebugging.Unity.Editor.SystemWarningThreshold = 1
 Entitas.VisualDebugging.Unity.Editor.DefaultInstanceCreatorFolderPath = Assets/Editor/DefaultInstanceCreator
 Entitas.VisualDebugging.Unity.Editor.TypeDrawerFolderPath = Assets/Editor/TypeDrawer
+Entitas.CodeGeneration.CodeGenerator.CLI.Ignore.UnusedKeys = Entitas.VisualDebugging.Unity.Editor.SystemWarningThreshold, \
+                                                             Entitas.VisualDebugging.Unity.Editor.DefaultInstanceCreatorFolderPath, \
+                                                             Entitas.VisualDebugging.Unity.Editor.TypeDrawerFolderPath, \
+                                                             user.unity
