--- a/Roslyn.properties
+++ b/Roslyn.properties
@@ -1,19 +1,15 @@
 Entitas.CodeGeneration.CodeGenerator.SearchPaths = CodeGenerator/Plugins/Default, \
-                                                   Assets/Libraries/Entitas, \
-                                                   Assets/Libraries/Entitas/Editor, \
-                                                   ${user.unity}/Managed, \
-                                                   ${user.unity}/Managed/UnityEngine, \
-                                                   ${user.unity}/Mono/lib/mono/unity, \
-                                                   ${user.unity}/UnityExtensions/Unity/GUISystem
+                                                   CodeGenerator/Plugins/Entitas.Roslyn
 
 Entitas.CodeGeneration.CodeGenerator.Mono = ${user.unity}/MonoBleedingEdge/bin/mono
 Entitas.CodeGeneration.CodeGenerator.CLI = CodeGenerator/entitas.exe
 Entitas.CodeGeneration.CodeGenerator.Plugins = Entitas.CodeGeneration.Plugins, \
-                                               Entitas.VisualDebugging.CodeGeneration.Plugins
+                                               Entitas.VisualDebugging.CodeGeneration.Plugins, \
+                                               Entitas.Roslyn.CodeGeneration.Plugins
 
-Entitas.CodeGeneration.CodeGenerator.DataProviders = Entitas.CodeGeneration.Plugins.ComponentDataProvider, \
-                                                     Entitas.CodeGeneration.Plugins.ContextDataProvider, \
-                                                     Entitas.CodeGeneration.Plugins.EntityIndexDataProvider
+Entitas.CodeGeneration.CodeGenerator.DataProviders = Entitas.CodeGeneration.Plugins.ContextDataProvider, \
+                                                     Entitas.Roslyn.CodeGeneration.Plugins.ComponentDataProvider, \
+                                                     Entitas.Roslyn.CodeGeneration.Plugins.EntityIndexDataProvider
 
 Entitas.CodeGeneration.CodeGenerator.CodeGenerators = Entitas.CodeGeneration.Plugins.ComponentContextGenerator, \
                                                       Entitas.CodeGeneration.Plugins.ComponentEntityGenerator, \
@@ -38,7 +34,6 @@ Entitas.CodeGeneration.CodeGenerator.PostProcessors = Entitas.CodeGeneration.Plu
                                                       Entitas.CodeGeneration.Plugins.WriteToDiskPostProcessor, \
                                                       Entitas.CodeGeneration.Plugins.ConsoleWriteLinePostProcessor
 
-Entitas.CodeGeneration.Plugins.Assemblies = Library/ScriptAssemblies/Assembly-CSharp.dll
 Entitas.CodeGeneration.Plugins.Contexts = Game, \
                                           GameState, \
                                           Input
