--- a/Entitas.properties
+++ b/Entitas.properties
@@ -1,42 +1,42 @@
-Entitas.CodeGeneration.CodeGenerator.SearchPaths = CodeGenerator/Plugins/Default, \
-                                                   Assets/Libraries/Entitas, \
-                                                   Assets/Libraries/Entitas/Editor, \
-                                                   ${user.unity}/Managed, \
-                                                   ${user.unity}/Managed/UnityEngine, \
-                                                   ${user.unity}/Mono/lib/mono/unity, \
-                                                   ${user.unity}/UnityExtensions/Unity/GUISystem
+CodeGenerator.SearchPaths = CodeGenerator/Plugins/Default, \
+                            Assets/Libraries/Entitas, \
+                            Assets/Libraries/Entitas/Editor, \
+                            ${user.unity}/Managed, \
+                            ${user.unity}/Managed/UnityEngine, \
+                            ${user.unity}/Mono/lib/mono/unity, \
+                            ${user.unity}/UnityExtensions/Unity/GUISystem
 
 Entitas.CodeGeneration.CodeGenerator.Mono = ${user.unity}/MonoBleedingEdge/bin/mono
 Entitas.CodeGeneration.CodeGenerator.CLI = CodeGenerator/entitas.exe
-Entitas.CodeGeneration.CodeGenerator.Plugins = Entitas.CodeGeneration.Plugins, \
-                                               Entitas.VisualDebugging.CodeGeneration.Plugins
+CodeGenerator.Plugins = Entitas.CodeGeneration.Plugins, \
+                        Entitas.VisualDebugging.CodeGeneration.Plugins
 
-Entitas.CodeGeneration.CodeGenerator.DataProviders = Entitas.CodeGeneration.Plugins.ComponentDataProvider, \
-                                                     Entitas.CodeGeneration.Plugins.ContextDataProvider, \
-                                                     Entitas.CodeGeneration.Plugins.EntityIndexDataProvider
+CodeGenerator.DataProviders = Entitas.CodeGeneration.Plugins.ComponentDataProvider, \
+                              Entitas.CodeGeneration.Plugins.ContextDataProvider, \
+                              Entitas.CodeGeneration.Plugins.EntityIndexDataProvider
 
-Entitas.CodeGeneration.CodeGenerator.CodeGenerators = Entitas.CodeGeneration.Plugins.ComponentContextGenerator, \
-                                                      Entitas.CodeGeneration.Plugins.ComponentEntityGenerator, \
-                                                      Entitas.CodeGeneration.Plugins.ComponentEntityInterfaceGenerator, \
-                                                      Entitas.CodeGeneration.Plugins.ComponentGenerator, \
-                                                      Entitas.CodeGeneration.Plugins.ComponentMatcherGenerator, \
-                                                      Entitas.CodeGeneration.Plugins.ComponentsLookupGenerator, \
-                                                      Entitas.CodeGeneration.Plugins.ContextAttributeGenerator, \
-                                                      Entitas.CodeGeneration.Plugins.ContextGenerator, \
-                                                      Entitas.CodeGeneration.Plugins.ContextMatcherGenerator, \
-                                                      Entitas.CodeGeneration.Plugins.ContextsGenerator, \
-                                                      Entitas.CodeGeneration.Plugins.EntityGenerator, \
-                                                      Entitas.CodeGeneration.Plugins.EntityIndexGenerator, \
-                                                      Entitas.VisualDebugging.CodeGeneration.Plugins.ContextObserverGenerator, \
-                                                      Entitas.VisualDebugging.CodeGeneration.Plugins.FeatureClassGenerator
+CodeGenerator.CodeGenerators = Entitas.CodeGeneration.Plugins.ComponentContextGenerator, \
+                               Entitas.CodeGeneration.Plugins.ComponentEntityGenerator, \
+                               Entitas.CodeGeneration.Plugins.ComponentEntityInterfaceGenerator, \
+                               Entitas.CodeGeneration.Plugins.ComponentGenerator, \
+                               Entitas.CodeGeneration.Plugins.ComponentMatcherGenerator, \
+                               Entitas.CodeGeneration.Plugins.ComponentsLookupGenerator, \
+                               Entitas.CodeGeneration.Plugins.ContextAttributeGenerator, \
+                               Entitas.CodeGeneration.Plugins.ContextGenerator, \
+                               Entitas.CodeGeneration.Plugins.ContextMatcherGenerator, \
+                               Entitas.CodeGeneration.Plugins.ContextsGenerator, \
+                               Entitas.CodeGeneration.Plugins.EntityGenerator, \
+                               Entitas.CodeGeneration.Plugins.EntityIndexGenerator, \
+                               Entitas.VisualDebugging.CodeGeneration.Plugins.ContextObserverGenerator, \
+                               Entitas.VisualDebugging.CodeGeneration.Plugins.FeatureClassGenerator
 
-Entitas.CodeGeneration.CodeGenerator.PostProcessors = Entitas.CodeGeneration.Plugins.AddFileHeaderPostProcessor, \
-                                                      Entitas.CodeGeneration.Plugins.CleanTargetDirectoryPostProcessor, \
-                                                      Entitas.CodeGeneration.Plugins.MergeFilesPostProcessor, \
-                                                      Entitas.CodeGeneration.Plugins.NewLinePostProcessor, \
-                                                      Entitas.CodeGeneration.Plugins.UpdateCSProjPostProcessor, \
-                                                      Entitas.CodeGeneration.Plugins.WriteToDiskPostProcessor, \
-                                                      Entitas.CodeGeneration.Plugins.ConsoleWriteLinePostProcessor
+CodeGenerator.PostProcessors = Entitas.CodeGeneration.Plugins.AddFileHeaderPostProcessor, \
+                               Entitas.CodeGeneration.Plugins.CleanTargetDirectoryPostProcessor, \
+                               Entitas.CodeGeneration.Plugins.MergeFilesPostProcessor, \
+                               Entitas.CodeGeneration.Plugins.NewLinePostProcessor, \
+                               Entitas.CodeGeneration.Plugins.UpdateCSProjPostProcessor, \
+                               Entitas.CodeGeneration.Plugins.WriteToDiskPostProcessor, \
+                               Entitas.CodeGeneration.Plugins.ConsoleWriteLinePostProcessor
 
 Entitas.CodeGeneration.Plugins.Assemblies = Library/ScriptAssemblies/Assembly-CSharp.dll
 Entitas.CodeGeneration.Plugins.Contexts = Game, \
@@ -49,8 +49,8 @@ Entitas.CodeGeneration.Plugins.TargetDirectory = Assets/Sources
 Entitas.VisualDebugging.Unity.Editor.SystemWarningThreshold = 1
 Entitas.VisualDebugging.Unity.Editor.DefaultInstanceCreatorFolderPath = Assets/Editor/DefaultInstanceCreator
 Entitas.VisualDebugging.Unity.Editor.TypeDrawerFolderPath = Assets/Editor/TypeDrawer
-Entitas.CodeGeneration.CodeGenerator.CLI.Ignore.UnusedKeys = Entitas.VisualDebugging.Unity.Editor.SystemWarningThreshold, \
-                                                             Entitas.VisualDebugging.Unity.Editor.DefaultInstanceCreatorFolderPath, \
-                                                             Entitas.VisualDebugging.Unity.Editor.TypeDrawerFolderPath, \
-                                                             user.unity
+CodeGenerator.CLI.Ignore.UnusedKeys = Entitas.VisualDebugging.Unity.Editor.SystemWarningThreshold, \
+                                      Entitas.VisualDebugging.Unity.Editor.DefaultInstanceCreatorFolderPath, \
+                                      Entitas.VisualDebugging.Unity.Editor.TypeDrawerFolderPath, \
+                                      user.unity
 
