--- a/Roslyn.properties
+++ b/Roslyn.properties
@@ -1,51 +1,43 @@
-Entitas.CodeGeneration.CodeGenerator.SearchPaths = CodeGenerator/Plugins/Default, \
-                                                   CodeGenerator/Plugins/Entitas.Roslyn
+CodeGenerator.SearchPaths = CodeGenerator/Plugins, \
+                            CodeGenerator/Plugins/Entitas, \
+                            CodeGenerator/Plugins/Entitas.Roslyn
 
-Entitas.CodeGeneration.CodeGenerator.Mono = ${user.unity}/MonoBleedingEdge/bin/mono
-Entitas.CodeGeneration.CodeGenerator.CLI = CodeGenerator/entitas.exe
-Entitas.CodeGeneration.CodeGenerator.Plugins = Entitas.CodeGeneration.Plugins, \
-                                               Entitas.VisualDebugging.CodeGeneration.Plugins, \
-                                               Entitas.Roslyn.CodeGeneration.Plugins
+CodeGenerator.Plugins = Entitas.CodeGeneration.Plugins, \
+                        Entitas.VisualDebugging.CodeGeneration.Plugins, \
+                        Entitas.Roslyn.CodeGeneration.Plugins
 
-Entitas.CodeGeneration.CodeGenerator.DataProviders = Entitas.CodeGeneration.Plugins.ContextDataProvider, \
-                                                     Entitas.Roslyn.CodeGeneration.Plugins.ComponentDataProvider, \
-                                                     Entitas.Roslyn.CodeGeneration.Plugins.EntityIndexDataProvider
+CodeGenerator.DataProviders = Entitas.CodeGeneration.Plugins.ContextDataProvider, \
+                              Entitas.Roslyn.CodeGeneration.Plugins.ComponentDataProvider, \
+                              Entitas.Roslyn.CodeGeneration.Plugins.EntityIndexDataProvider
 
-Entitas.CodeGeneration.CodeGenerator.CodeGenerators = Entitas.CodeGeneration.Plugins.ComponentContextGenerator, \
-                                                      Entitas.CodeGeneration.Plugins.ComponentEntityGenerator, \
-                                                      Entitas.CodeGeneration.Plugins.ComponentEntityInterfaceGenerator, \
-                                                      Entitas.CodeGeneration.Plugins.ComponentGenerator, \
-                                                      Entitas.CodeGeneration.Plugins.ComponentMatcherGenerator, \
-                                                      Entitas.CodeGeneration.Plugins.ComponentsLookupGenerator, \
-                                                      Entitas.CodeGeneration.Plugins.ContextAttributeGenerator, \
-                                                      Entitas.CodeGeneration.Plugins.ContextGenerator, \
-                                                      Entitas.CodeGeneration.Plugins.ContextMatcherGenerator, \
-                                                      Entitas.CodeGeneration.Plugins.ContextsGenerator, \
-                                                      Entitas.CodeGeneration.Plugins.EntityGenerator, \
-                                                      Entitas.CodeGeneration.Plugins.EntityIndexGenerator, \
-                                                      Entitas.VisualDebugging.CodeGeneration.Plugins.ContextObserverGenerator, \
-                                                      Entitas.VisualDebugging.CodeGeneration.Plugins.FeatureClassGenerator
+CodeGenerator.CodeGenerators = Entitas.CodeGeneration.Plugins.ComponentContextGenerator, \
+                               Entitas.CodeGeneration.Plugins.ComponentEntityGenerator, \
+                               Entitas.CodeGeneration.Plugins.ComponentEntityInterfaceGenerator, \
+                               Entitas.CodeGeneration.Plugins.ComponentGenerator, \
+                               Entitas.CodeGeneration.Plugins.ComponentMatcherGenerator, \
+                               Entitas.CodeGeneration.Plugins.ComponentsLookupGenerator, \
+                               Entitas.CodeGeneration.Plugins.ContextAttributeGenerator, \
+                               Entitas.CodeGeneration.Plugins.ContextGenerator, \
+                               Entitas.CodeGeneration.Plugins.ContextMatcherGenerator, \
+                               Entitas.CodeGeneration.Plugins.ContextsGenerator, \
+                               Entitas.CodeGeneration.Plugins.EntityGenerator, \
+                               Entitas.CodeGeneration.Plugins.EntityIndexGenerator, \
+                               Entitas.VisualDebugging.CodeGeneration.Plugins.ContextObserverGenerator, \
+                               Entitas.VisualDebugging.CodeGeneration.Plugins.FeatureClassGenerator
 
-Entitas.CodeGeneration.CodeGenerator.PostProcessors = Entitas.CodeGeneration.Plugins.AddFileHeaderPostProcessor, \
-                                                      Entitas.CodeGeneration.Plugins.CleanTargetDirectoryPostProcessor, \
-                                                      Entitas.CodeGeneration.Plugins.MergeFilesPostProcessor, \
-                                                      Entitas.CodeGeneration.Plugins.NewLinePostProcessor, \
-                                                      Entitas.CodeGeneration.Plugins.UpdateCSProjPostProcessor, \
-                                                      Entitas.CodeGeneration.Plugins.WriteToDiskPostProcessor, \
-                                                      Entitas.CodeGeneration.Plugins.ConsoleWriteLinePostProcessor
+CodeGenerator.PostProcessors = Entitas.CodeGeneration.Plugins.AddFileHeaderPostProcessor, \
+                               Entitas.CodeGeneration.Plugins.CleanTargetDirectoryPostProcessor, \
+                               Entitas.CodeGeneration.Plugins.MergeFilesPostProcessor, \
+                               Entitas.CodeGeneration.Plugins.NewLinePostProcessor, \
+                               Entitas.CodeGeneration.Plugins.UpdateCSProjPostProcessor, \
+                               Entitas.CodeGeneration.Plugins.WriteToDiskPostProcessor, \
+                               Entitas.CodeGeneration.Plugins.ConsoleWriteLinePostProcessor
 
+CodeGenerator.CLI.Ignore.UnusedKeys = 
 Entitas.CodeGeneration.Plugins.Contexts = Game, \
                                           GameState, \
                                           Input
 
-Entitas.CodeGeneration.Plugins.IgnoreNamespaces = false
 Entitas.CodeGeneration.Plugins.ProjectPath = Assembly-CSharp.csproj
+Entitas.CodeGeneration.Plugins.IgnoreNamespaces = false
 Entitas.CodeGeneration.Plugins.TargetDirectory = Assets/Sources
-Entitas.VisualDebugging.Unity.Editor.SystemWarningThreshold = 1
-Entitas.VisualDebugging.Unity.Editor.DefaultInstanceCreatorFolderPath = Assets/Editor/DefaultInstanceCreator
-Entitas.VisualDebugging.Unity.Editor.TypeDrawerFolderPath = Assets/Editor/TypeDrawer
-Entitas.CodeGeneration.CodeGenerator.CLI.Ignore.UnusedKeys = Entitas.VisualDebugging.Unity.Editor.SystemWarningThreshold, \
-                                                             Entitas.VisualDebugging.Unity.Editor.DefaultInstanceCreatorFolderPath, \
-                                                             Entitas.VisualDebugging.Unity.Editor.TypeDrawerFolderPath, \
-                                                             user.unity
-
