Using 0.46.0 + latest commits from develop

--- a/Entitas.properties
+++ b/Entitas.properties
@@ -1,13 +1,16 @@
-CodeGenerator.SearchPaths = CodeGenerator/Plugins/Entitas, \
-                            Assets/Libraries/Entitas, \
-                            Assets/Libraries/Entitas/Editor, \
-                            ${user.unity}/Managed, \
-                            ${user.unity}/Managed/UnityEngine, \
-                            ${user.unity}/Mono/lib/mono/unity, \
-                            ${user.unity}/UnityExtensions/Unity/GUISystem
+Preferences.Entitas = Entitas.Unity.Editor.EntitasPreferencesDrawer, \
+                      DesperateDevs.CodeGeneration.CodeGenerator.Unity.Editor.CodeGeneratorPreferencesDrawer, \
+                      Entitas.VisualDebugging.Unity.Editor.VisualDebuggingPreferencesDrawer
+
+CodeGenerator.SearchPaths = CodeGenerator/Plugins, \
+                            CodeGenerator/Plugins/Entitas, \
+                            CodeGenerator/Plugins/Jenny, \
+                            Assets/Libraries/Entitas/Editor
 
 CodeGenerator.Plugins = Entitas.CodeGeneration.Plugins, \
-                        Entitas.VisualDebugging.CodeGeneration.Plugins
+                        Entitas.VisualDebugging.CodeGeneration.Plugins, \
+                        DesperateDevs.CodeGeneration.Plugins, \
+                        DesperateDevs.CodeGeneration.Unity.Plugins
 
 CodeGenerator.DataProviders = Entitas.CodeGeneration.Plugins.ComponentDataProvider, \
                               Entitas.CodeGeneration.Plugins.ContextDataProvider, \
@@ -28,27 +31,25 @@ CodeGenerator.CodeGenerators = Entitas.CodeGeneration.Plugins.ComponentContextGe
                                Entitas.VisualDebugging.CodeGeneration.Plugins.ContextObserverGenerator, \
                                Entitas.VisualDebugging.CodeGeneration.Plugins.FeatureClassGenerator
 
-CodeGenerator.PostProcessors = Entitas.CodeGeneration.Plugins.AddFileHeaderPostProcessor, \
-                               Entitas.CodeGeneration.Plugins.CleanTargetDirectoryPostProcessor, \
-                               Entitas.CodeGeneration.Plugins.MergeFilesPostProcessor, \
-                               Entitas.CodeGeneration.Plugins.NewLinePostProcessor, \
-                               Entitas.CodeGeneration.Plugins.UpdateCSProjPostProcessor, \
-                               Entitas.CodeGeneration.Plugins.WriteToDiskPostProcessor, \
-                               Entitas.CodeGeneration.Plugins.ConsoleWriteLinePostProcessor
+CodeGenerator.PostProcessors = DesperateDevs.CodeGeneration.Plugins.AddFileHeaderPostProcessor, \
+                               DesperateDevs.CodeGeneration.Plugins.CleanTargetDirectoryPostProcessor, \
+                               DesperateDevs.CodeGeneration.Plugins.MergeFilesPostProcessor, \
+                               DesperateDevs.CodeGeneration.Plugins.NewLinePostProcessor, \
+                               DesperateDevs.CodeGeneration.Plugins.UpdateCSProjPostProcessor, \
+                               DesperateDevs.CodeGeneration.Plugins.WriteToDiskPostProcessor, \
+                               DesperateDevs.CodeGeneration.Unity.Plugins.DebugLogPostProcessor, \
+                               Entitas.CodeGeneration.Plugins.UsagePostProcessor
 
-Entitas.CodeGeneration.Plugins.Assemblies = Library/ScriptAssemblies/Assembly-CSharp.dll
-Entitas.CodeGeneration.Plugins.Contexts = Game, \
-                                          GameState, \
-                                          Input
-
-Entitas.CodeGeneration.Plugins.IgnoreNamespaces = false
-Entitas.CodeGeneration.Plugins.ProjectPath = Assembly-CSharp.csproj
-Entitas.CodeGeneration.Plugins.TargetDirectory = Assets/Sources
-Entitas.VisualDebugging.Unity.Editor.SystemWarningThreshold = 1
+CodeGenerator.Server.Port = 3333
+CodeGenerator.Client.Host = localhost
+Entitas.VisualDebugging.Unity.Editor.SystemWarningThreshold = 5
 Entitas.VisualDebugging.Unity.Editor.DefaultInstanceCreatorFolderPath = Assets/Editor/DefaultInstanceCreator
 Entitas.VisualDebugging.Unity.Editor.TypeDrawerFolderPath = Assets/Editor/TypeDrawer
-CodeGenerator.CLI.Ignore.UnusedKeys = Entitas.VisualDebugging.Unity.Editor.SystemWarningThreshold, \
-                                      Entitas.VisualDebugging.Unity.Editor.DefaultInstanceCreatorFolderPath, \
-                                      Entitas.VisualDebugging.Unity.Editor.TypeDrawerFolderPath, \
-                                      user.unity
+Entitas.CodeGeneration.Plugins.Assemblies = Library/ScriptAssemblies/Assembly-CSharp.dll
+Entitas.CodeGeneration.Plugins.Contexts = Game, \
+                                          Input, \
+                                          GameState
 
+Entitas.CodeGeneration.Plugins.IgnoreNamespaces = false
+DesperateDevs.CodeGeneration.Plugins.TargetDirectory = Assets/Sources
+DesperateDevs.CodeGeneration.Plugins.ProjectPath = Assembly-CSharp.csproj
