--- a/Preferences.properties
+++ b/Preferences.properties
@@ -1,13 +1,14 @@
-CodeGenerator.SearchPaths = CodeGenerator/Plugins, \
-                            CodeGenerator/Plugins/Entitas, \
-                            CodeGenerator/Plugins/Jenny, \
-                            /Applications/Unity/Unity.app/Contents/Managed, \
-                            /Applications/Unity/Unity.app/Contents/Managed/UnityEngine
+Preferences.Entitas = Entitas.Unity.Editor.EntitasPreferencesDrawer, \
+                      DesperateDevs.CodeGeneration.CodeGenerator.Unity.Editor.CodeGeneratorPreferencesDrawer, \
+                      Entitas.VisualDebugging.Unity.Editor.VisualDebuggingPreferencesDrawer
 
-CodeGenerator.Plugins = Entitas.CodeGeneration.Plugins, \
-                        Entitas.VisualDebugging.CodeGeneration.Plugins, \
-                        DesperateDevs.CodeGeneration.Plugins
+CodeGenerator.SearchPaths = ./Assets/Libraries/Entitas/Editor/Plugins
+CodeGenerator.Plugins = DesperateDevs.CodeGeneration.Plugins, \
+                        DesperateDevs.CodeGeneration.Unity.Plugins, \
+                        Entitas.CodeGeneration.Plugins, \
+                        Entitas.VisualDebugging.CodeGeneration.Plugins
 
+CodeGenerator.PreProcessors = DesperateDevs.CodeGeneration.Plugins.TargetFrameworkProfilePreProcessor
 CodeGenerator.DataProviders = Entitas.CodeGeneration.Plugins.ComponentDataProvider, \
                               Entitas.CodeGeneration.Plugins.ContextDataProvider, \
                               Entitas.CodeGeneration.Plugins.EntityIndexDataProvider
@@ -34,11 +35,14 @@ CodeGenerator.PostProcessors = DesperateDevs.CodeGeneration.Plugins.AddFileHeade
                                DesperateDevs.CodeGeneration.Plugins.UpdateCSProjPostProcessor, \
                                DesperateDevs.CodeGeneration.Plugins.WriteToDiskPostProcessor, \
                                DesperateDevs.CodeGeneration.Plugins.ConsoleWriteLinePostProcessor, \
-                               Entitas.CodeGeneration.Plugins.UsagePostProcessor
+                               DesperateDevs.CodeGeneration.Unity.Plugins.DebugLogPostProcessor
 
 CodeGenerator.Server.Port = 3333
 CodeGenerator.Client.Host = localhost
-CodeGenerator.CLI.Ignore.UnusedKeys = 
+Entitas.VisualDebugging.Unity.Editor.SystemWarningThreshold = 5
+Entitas.VisualDebugging.Unity.Editor.DefaultInstanceCreatorFolderPath = Assets/Editor/DefaultInstanceCreator
+Entitas.VisualDebugging.Unity.Editor.TypeDrawerFolderPath = Assets/Editor/TypeDrawer
+DesperateDevs.CodeGeneration.Plugins.ProjectPath = Assembly-CSharp.csproj
 Entitas.CodeGeneration.Plugins.Assemblies = Library/ScriptAssemblies/Assembly-CSharp.dll
 Entitas.CodeGeneration.Plugins.Contexts = Game, \
                                           Input, \
@@ -46,4 +50,3 @@ Entitas.CodeGeneration.Plugins.Contexts = Game, \
 
 Entitas.CodeGeneration.Plugins.IgnoreNamespaces = false
 DesperateDevs.CodeGeneration.Plugins.TargetDirectory = Assets/Sources
-DesperateDevs.CodeGeneration.Plugins.ProjectPath = Assembly-CSharp.csproj
