--- a/Preferences.properties
+++ b/Preferences.properties
@@ -2,8 +2,7 @@ Preferences.Entitas = Entitas.Unity.Editor.EntitasPreferencesDrawer, \
                       DesperateDevs.CodeGeneration.CodeGenerator.Unity.Editor.CodeGeneratorPreferencesDrawer, \
                       Entitas.VisualDebugging.Unity.Editor.VisualDebuggingPreferencesDrawer
 
-Jenny.SearchPaths = ./Assets/Libraries/Entitas/Editor/Plugins, \
-                    Assets/Libraries/Entitas/Editor/Plugins/DesperateDevs, \
+Jenny.SearchPaths = Assets/Libraries/Entitas/Editor/Plugins/DesperateDevs, \
                     Assets/Libraries/Entitas/Editor/Plugins/Entitas
 
 Jenny.Plugins = DesperateDevs.CodeGeneration.Plugins, \
