--- a/Preferences.properties
+++ b/Preferences.properties
@@ -27,6 +27,10 @@ Jenny.CodeGenerators = Entitas.CodeGeneration.Plugins.ComponentContextGenerator,
                        Entitas.CodeGeneration.Plugins.ContextsGenerator, \
                        Entitas.CodeGeneration.Plugins.EntityGenerator, \
                        Entitas.CodeGeneration.Plugins.EntityIndexGenerator, \
+                       Entitas.CodeGeneration.Plugins.EventComponentGenerator, \
+                       Entitas.CodeGeneration.Plugins.EventInterfaceGenerator, \
+                       Entitas.CodeGeneration.Plugins.EventSystemGenerator, \
+                       Entitas.CodeGeneration.Plugins.EventSystemsGenerator, \
                        Entitas.VisualDebugging.CodeGeneration.Plugins.ContextObserverGenerator, \
                        Entitas.VisualDebugging.CodeGeneration.Plugins.FeatureClassGenerator
 
