--- a/Preferences.properties
+++ b/Preferences.properties
@@ -15,20 +15,19 @@ Jenny.DataProviders = Entitas.CodeGeneration.Plugins.ComponentDataProvider, \
                       Entitas.CodeGeneration.Plugins.ContextDataProvider, \
                       Entitas.CodeGeneration.Plugins.EntityIndexDataProvider
 
-Jenny.CodeGenerators = Entitas.CodeGeneration.Plugins.ComponentContextGenerator, \
-                       Entitas.CodeGeneration.Plugins.ComponentEntityGenerator, \
-                       Entitas.CodeGeneration.Plugins.ComponentEntityInterfaceGenerator, \
-                       Entitas.CodeGeneration.Plugins.ComponentGenerator, \
-                       Entitas.CodeGeneration.Plugins.ComponentMatcherGenerator, \
-                       Entitas.CodeGeneration.Plugins.ComponentsLookupGenerator, \
+Jenny.CodeGenerators = Entitas.CodeGeneration.Plugins.ComponentContextApiGenerator, \
+                       Entitas.CodeGeneration.Plugins.ComponentEntityApiGenerator, \
+                       Entitas.CodeGeneration.Plugins.ComponentLookupGenerator, \
+                       Entitas.CodeGeneration.Plugins.ComponentMatcherApiGenerator, \
                        Entitas.CodeGeneration.Plugins.ContextAttributeGenerator, \
                        Entitas.CodeGeneration.Plugins.ContextGenerator, \
                        Entitas.CodeGeneration.Plugins.ContextMatcherGenerator, \
                        Entitas.CodeGeneration.Plugins.ContextsGenerator, \
                        Entitas.CodeGeneration.Plugins.EntityGenerator, \
                        Entitas.CodeGeneration.Plugins.EntityIndexGenerator, \
-                       Entitas.CodeGeneration.Plugins.EventComponentGenerator, \
-                       Entitas.CodeGeneration.Plugins.EventInterfaceGenerator, \
+                       Entitas.CodeGeneration.Plugins.EventEntityApiGenerator, \
+                       Entitas.CodeGeneration.Plugins.EventListenerComponentGenerator, \
+                       Entitas.CodeGeneration.Plugins.EventListenertInterfaceGenerator, \
                        Entitas.CodeGeneration.Plugins.EventSystemGenerator, \
                        Entitas.CodeGeneration.Plugins.EventSystemsGenerator, \
                        Entitas.VisualDebugging.CodeGeneration.Plugins.ContextObserverGenerator, \
@@ -40,7 +39,6 @@ Jenny.PostProcessors = DesperateDevs.CodeGeneration.Plugins.AddFileHeaderPostPro
                        DesperateDevs.CodeGeneration.Plugins.NewLinePostProcessor, \
                        DesperateDevs.CodeGeneration.Plugins.UpdateCSProjPostProcessor, \
                        DesperateDevs.CodeGeneration.Plugins.WriteToDiskPostProcessor, \
-                       DesperateDevs.CodeGeneration.Plugins.ConsoleWriteLinePostProcessor, \
                        DesperateDevs.CodeGeneration.Unity.Plugins.DebugLogPostProcessor
 
 Jenny.Server.Port = 3333
