--- a/Jenny.properties
+++ b/Jenny.properties
@@ -51,7 +51,8 @@ Jenny.Client.Host = localhost
 DesperateDevs.CodeGeneration.Plugins.ProjectPath = Assembly-CSharp.csproj
 Entitas.CodeGeneration.Plugins.Contexts = Game, \
                                           Input, \
-                                          GameState
+                                          GameState, \
+                                          Config
 
 Entitas.CodeGeneration.Plugins.IgnoreNamespaces = false
 DesperateDevs.CodeGeneration.Plugins.TargetDirectory = Assets
