Update to Jenny.Plugins 1.1.0

--- a/Jenny.properties
+++ b/Jenny.properties
@@ -6,7 +6,8 @@ Jenny.Plugins = Entitas.CodeGeneration.Plugins, \
                 Entitas.VisualDebugging.CodeGeneration.Plugins, \
                 Jenny.Plugins, \
                 Jenny.Plugins.Unity
-Jenny.PreProcessors = Jenny.Plugins.ValidateProjectPathPreProcessor
+Jenny.PreProcessors = Jenny.Plugins.ValidateProjectPathPreProcessor, \
+                      Jenny.Plugins.ReferenceAssemblyPathsPreProcessor
 Jenny.DataProviders = Entitas.CodeGeneration.Plugins.ContextDataProvider, \
                       Entitas.Roslyn.CodeGeneration.Plugins.CleanupDataProvider, \
                       Entitas.Roslyn.CodeGeneration.Plugins.ComponentDataProvider, \
